--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,9 +44,13 @@
 }
 
 .product-slider .card-img-top{
+  width: 300px;
+  padding-bottom: 30px;
+}
+.card-img-top img{
   width: 100%;
-  height: 280px;
-  padding: 30px 30px;
+  height: 100%;
+  border-radius: 50%;
   object-fit: cover;
 }
 
@@ -306,6 +310,18 @@ a {
 
 .product-slider .card-title{
   text-align: center;
+}
+
+.card-product {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.card-product:hover {
+  transform: scale(1.03);
+  transition: transform 0.s ease;
+  border-radius: 10px;
 }
 
 
