--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,27 @@
-.container{
+.container {
   width: 1200px;
   margin: 0 auto;
 }
 
-.carousel-inner{
+.carousel-inner {
   height: 400px;
 }
 
 .logo {
-  width: 50px; 
-  height: auto; 
-  margin-right: 8px; 
+  width: 50px;
+  height: auto;
+  margin-right: 8px;
 }
 
 .navbar-brand {
   display: flex;
-  align-items: center; 
-  text-decoration: none; 
-  color: inherit; 
+  align-items: center;
+  text-decoration: none;
+  color: inherit;
   margin-right: 60px;
 }
 
-.banner-sale{
+.banner-sale {
   display: flex;
   margin: 40px 0;
   gap: 30px;
@@ -35,26 +35,26 @@
   overflow: hidden;
 }
 
-.product-slider{
+.product-slider {
   margin-top: 65px;
 }
 
-.product-slider .card{
+.product-slider .card {
   height: 300px;
 }
 
-.product-slider .card-img-top{
+.product-slider .card-img-top {
   width: 300px;
   padding-bottom: 30px;
 }
-.card-img-top img{
+.card-img-top img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
   object-fit: cover;
 }
 
-.product-slider .card-title{
+.product-slider .card-title {
   text-align: center;
   margin-top: -25px;
 }
@@ -173,7 +173,7 @@ a {
 
 /* Header */
 
-.widgets-wrap{
+.widgets-wrap {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -189,7 +189,6 @@ a {
 }
 .widget-header i {
   color: #969696;
-
 }
 .widget-header form {
   min-width: 280px;
@@ -280,7 +279,6 @@ a {
   padding: 8px 12px !important;
 }
 
-
 .items-bordered-wrap .itemside:not(:last-child) {
   border-bottom: 1px solid #e4e4e4;
   padding-bottom: 10px;
@@ -295,20 +293,20 @@ a {
   color: #ffffff;
 }
 
-.card{
+.card {
   border: none;
 }
 
-.product-slider{
+.product-slider {
   margin-top: 65px;
 }
 
-.product-slider .card-img-top{
+.product-slider .card-img-top {
   width: 100%;
   height: 260px;
 }
 
-.product-slider .card-title{
+.product-slider .card-title {
   text-align: center;
 }
 
@@ -318,20 +316,45 @@ a {
 
 .card-product:hover {
   transform: scale(1.03);
-  transition: transform 0.s ease;
+  transition: transform 0s ease;
   border-radius: 10px;
 }
 
-
 /* ===================Footer=================== */
 footer {
-  background: #F0F3F2;
+  background: #f0f3f2;
   padding: 40px;
 }
-footer a, i, li {
+footer a,
+i,
+li {
   color: #565656 !important;
 }
 
-footer .footer-contact{
+footer .footer-contact {
   color: #565656 !important;
+}
+
+/* Rating */
+.rating {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+}
+
+.rating input {
+  display: none;
+}
+
+.rating label {
+  cursor: pointer;
+  font-size: 2rem;
+  color: #ccc;
+  transition: color 0.2s;
+}
+
+.rating input:checked ~ label,
+.rating label:hover,
+.rating label:hover ~ label {
+  color: #ffcc00;
 }
