--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,24 +337,36 @@ footer .footer-contact {
 
 /* Rating */
 .rating {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: center;
+  direction: rtl;
+  unicode-bidi: bidi-override;
+  display: inline-flex;
 }
 
-.rating input {
+.rating input[type='radio'] {
   display: none;
 }
 
 .rating label {
+  font-size: 2em;
+  color: #ddd;
   cursor: pointer;
-  font-size: 2rem;
-  color: #ccc;
-  transition: color 0.2s;
 }
 
-.rating input:checked ~ label,
 .rating label:hover,
-.rating label:hover ~ label {
-  color: #ffcc00;
+.rating label:hover ~ label,
+.rating input[type='radio']:checked ~ label {
+  color: #f5b301;
+}
+
+.rating {
+  display: inline-flex;
+}
+
+.star {
+  font-size: 2em;
+  color: #ddd;
+}
+
+.star.filled {
+  color: #f5b301;
 }
